feat: Retrieve I18N keys using REST endpoints for Site Name and Description - MEED-3342 - Meeds-io/meeds#1629 (#4032)
After the enhanced behavior made on Meeds-io/gatein-portal#970, this
change will allow to provide I18N keys on names and descriptions of
Sites REST endpoint.